{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 303,
  "lineage": "d36e8f0c-56fc-bec6-40ff-8420b073f858",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fortressmaximus-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0592e104f6ab41e93",
            "arn": "arn:aws:ec2:eu-west-3:114501972836:elastic-ip/eipalloc-0592e104f6ab41e93",
            "domain": "vpc",
            "id": "eipalloc-0592e104f6ab41e93",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-242-145.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.242.145",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags": {
              "Name": "fortressmaximus-nat-eip",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-nat-eip",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortressmaximus-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09968b16214ef62ce",
            "arn": "arn:aws:ec2:eu-west-3:114501972836:instance/i-08e66b940f86b2228",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e66b940f86b2228",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e61cb4d951ed3ae9"
              }
            ],
            "primary_network_interface_id": "eni-0e61cb4d951ed3ae9",
            "private_dns": "ip-10-109-1-194.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.109.1.194",
            "public_dns": "ec2-15-237-250-247.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.250.247",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-068ca7868194e3126",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d728b139722a2a0",
            "tags": {
              "Name": "fortressmaximus-ec2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0093e4b79c3e6efad",
              "sg-07061e1c62a24e209"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "i-08e66b940f86b2228",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_security_group.ping-sg",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fortressmaximus-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:internet-gateway/igw-0658fa28bc1674fce",
            "id": "igw-0658fa28bc1674fce",
            "owner_id": "114501972836",
            "region": "eu-west-3",
            "tags": {
              "Name": "fortressmaximus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "fortressmaximus-nat-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0592e104f6ab41e93",
            "association_id": "eipassoc-0568d41cb5057821c",
            "connectivity_type": "public",
            "id": "nat-09513cde0ac4b00da",
            "network_interface_id": "eni-0caaf0234976182d2",
            "private_ip": "10.109.1.202",
            "public_ip": "15.188.242.145",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d728b139722a2a0",
            "tags": {
              "Name": "fortressmaximus-nat-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-nat-igw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.fortressmaximus-nat-eip",
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:route-table/rtb-02a47d3d8ac1a80fa",
            "id": "rtb-02a47d3d8ac1a80fa",
            "owner_id": "114501972836",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09513cde0ac4b00da",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortressmaximus-private-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "rtb-02a47d3d8ac1a80fa",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_eip.fortressmaximus-nat-eip",
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_nat_gateway.fortressmaximus-nat-igw",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:route-table/rtb-04a6038c9593d3da0",
            "id": "rtb-04a6038c9593d3da0",
            "owner_id": "114501972836",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0658fa28bc1674fce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortressmaximus-public-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "rtb-04a6038c9593d3da0",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e9b996cb933e50c",
            "region": "eu-west-3",
            "route_table_id": "rtb-02a47d3d8ac1a80fa",
            "subnet_id": "subnet-03dbacdcde8d1c5b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.fortressmaximus-nat-eip",
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_nat_gateway.fortressmaximus-nat-igw",
            "aws_route_table.private",
            "aws_subnet.private-subnet-eu-west-3a",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a35859e070e778",
            "region": "eu-west-3",
            "route_table_id": "rtb-02a47d3d8ac1a80fa",
            "subnet_id": "subnet-0d04cbb29efdb88a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.fortressmaximus-nat-eip",
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_nat_gateway.fortressmaximus-nat-igw",
            "aws_route_table.private",
            "aws_subnet.private-subnet-eu-west-3b",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054f5112b546ee348",
            "region": "eu-west-3",
            "route_table_id": "rtb-02a47d3d8ac1a80fa",
            "subnet_id": "subnet-0c5748ccc4ecde44d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.fortressmaximus-nat-eip",
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_nat_gateway.fortressmaximus-nat-igw",
            "aws_route_table.private",
            "aws_subnet.private-subnet-eu-west-3c",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011750798372a3538",
            "region": "eu-west-3",
            "route_table_id": "rtb-04a6038c9593d3da0",
            "subnet_id": "subnet-05d728b139722a2a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_route_table.public",
            "aws_subnet.public-subnet-eu-west-3a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e348810d60ace21d",
            "region": "eu-west-3",
            "route_table_id": "rtb-04a6038c9593d3da0",
            "subnet_id": "subnet-0053bda21d4b2989f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_route_table.public",
            "aws_subnet.public-subnet-eu-west-3b",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c71522ac557a961",
            "region": "eu-west-3",
            "route_table_id": "rtb-04a6038c9593d3da0",
            "subnet_id": "subnet-0e743c277dee6e08d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_route_table.public",
            "aws_subnet.public-subnet-eu-west-3c",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortressmaximus-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group/sg-07061e1c62a24e209",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07061e1c62a24e209",
            "ingress": [],
            "name": "fortressmaximus-sg",
            "name_prefix": "",
            "owner_id": "114501972836",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortressmaximus-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sg-07061e1c62a24e209",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group/sg-0093e4b79c3e6efad",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0093e4b79c3e6efad",
            "ingress": [],
            "name": "ping-sg",
            "name_prefix": "",
            "owner_id": "114501972836",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ping-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sg-0093e4b79c3e6efad",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-03dbacdcde8d1c5b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.109.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dbacdcde8d1c5b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-subnet-eu-west-3a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-west-3a"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-03dbacdcde8d1c5b8",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-0d04cbb29efdb88a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.109.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04cbb29efdb88a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-subnet-eu-west-3b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-west-3b"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-0d04cbb29efdb88a9",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-0c5748ccc4ecde44d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.109.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5748ccc4ecde44d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "private-subnet-eu-west-3c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-west-3c"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-0c5748ccc4ecde44d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-eu-west-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-05d728b139722a2a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.109.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d728b139722a2a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-subnet-eu-west-3a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-west-3a"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-05d728b139722a2a0",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-eu-west-3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-0053bda21d4b2989f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.109.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0053bda21d4b2989f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-subnet-eu-west-3b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-west-3b"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-0053bda21d4b2989f",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-eu-west-3c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:subnet/subnet-0e743c277dee6e08d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.109.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e743c277dee6e08d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "public-subnet-eu-west-3c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-west-3c"
            },
            "vpc_id": "vpc-0c2ec1ce568dcb5c0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-0e743c277dee6e08d",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fortressmaximus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:vpc/vpc-0c2ec1ce568dcb5c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.109.0.0/16",
            "default_network_acl_id": "acl-090bca001c452fef3",
            "default_route_table_id": "rtb-0f470cdbc2bbd84f7",
            "default_security_group_id": "sg-071c73e6d3cbdb7f3",
            "dhcp_options_id": "dopt-0ea57fda82f1f698e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2ec1ce568dcb5c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f470cdbc2bbd84f7",
            "owner_id": "114501972836",
            "region": "eu-west-3",
            "tags": {
              "Name": "fortressmaximus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "vpc-0c2ec1ce568dcb5c0",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-for-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group-rule/sgr-0a008cc95ad85e8ba",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a008cc95ad85e8ba",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0093e4b79c3e6efad",
            "security_group_rule_id": "sgr-0a008cc95ad85e8ba",
            "tags": {
              "Name": "egress-for-ping"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "egress-for-ping"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0a008cc95ad85e8ba",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.ping-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "fortressmaximus-sg-allow-all-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group-rule/sgr-019f6b1598fb5544f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-019f6b1598fb5544f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-07061e1c62a24e209",
            "security_group_rule_id": "sgr-019f6b1598fb5544f",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-019f6b1598fb5544f",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fortressmaximus-sg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group-rule/sgr-0484ad02efa9d64e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP",
            "from_port": 80,
            "id": "sgr-0484ad02efa9d64e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-07061e1c62a24e209",
            "security_group_rule_id": "sgr-0484ad02efa9d64e2",
            "tags": {
              "Name": "HTTP"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "HTTP"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0484ad02efa9d64e2",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fortressmaximus-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group-rule/sgr-0ab5e349e47d63059",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgr-0ab5e349e47d63059",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-07061e1c62a24e209",
            "security_group_rule_id": "sgr-0ab5e349e47d63059",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0ab5e349e47d63059",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "icmp-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:114501972836:security-group-rule/sgr-071b2ac6ec7206dac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "icmp-ping",
            "from_port": null,
            "id": "sgr-071b2ac6ec7206dac",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0093e4b79c3e6efad",
            "security_group_rule_id": "sgr-071b2ac6ec7206dac",
            "tags": {
              "Name": "icmp-ping"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "icmp-ping"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-071b2ac6ec7206dac",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.ping-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    }
  ]
}